<resources>
    <string name="app_name">OrderIT</string>
    <string name="select_table">SELECT TABLE...</string>
    <string name="submit">SUBMIT</string>
    <string name="category">Category</string>
    <string name="order_icon">OrderIcon</string>
    <string name="grey">GreyImg</string>
    <string name="food_name">Food name</string>
    <string name="price">price</string>
    <string name="select_btn">select</string>
    <string name="food_image">food image</string>
    <string name="down_arrow">down arrow</string>
    <string name="description">Description</string>
    <string name="quantity">1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="blue">BlueImg</string>
    <string name="table_num">Table : 1</string>
    <string name="total">Total :</string>
    <string name="payment">Payment</string>
    <string name="delete_button">delete button</string>
    <string name="minus_button_cart">minus button cart</string>
    <string name="plus_button_cart">plus button cart</string>
    <string name="cart_button">cart button</string>
    <string name="plus_button">plus button</string>
    <string name="minus_button">minus button</string>
    <string name="selected_food_image">selected food image</string>
</resources>
