<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainphoto"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/orderit_icon"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/order_icon"
        android:src="@drawable/orderit_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />


    <Spinner
        android:id="@+id/tables_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/sp_de"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderit_icon"
        app:layout_constraintVertical_bias="0.6" />


    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/down_arrow"
        android:src="@drawable/down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tables_spinner"
        app:layout_constraintEnd_toEndOf="@+id/tables_spinner"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="@+id/tables_spinner"
        app:layout_constraintTop_toTopOf="@+id/tables_spinner" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/submit_btn"
        android:gravity="center"
        android:text="@string/submit"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tables_spinner"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tables_spinner"
        app:layout_constraintTop_toBottomOf="@+id/tables_spinner"
        app:layout_constraintVertical_bias="0.0" />





</androidx.constraintlayout.widget.ConstraintLayout>